--- a/web/hello.html
+++ b/web/hello.html
@@ -7,12 +7,50 @@
     <title>01 Prove: Addignment - Hello World</title>
     <meta name="CSE341"
         content="Hello World">
+    <style>
+        html {
+            background: #0b0033;
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        figure {
+            background: #800000;
+            color: white;
+            display: inline-block;
+            margin: 1rem auto;
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 5px 5px 15px #fff05a;
+        }
+
+        figcaption {
+            text-align: left;
+            margin-top: 1rem;
+        }
+
+        img {
+            width: 100%;
+            max-width: 400px;
+            border-radius: 10px;            
+            box-shadow: 5px 5px 15px #ffd25a;
+        }
+    </style>
 </head>
 
 <body>
   <main>
-    <p>Hello World!</p>
+    <div class="center">
+        <figure>
+            <img src="lee_prof_dec_2020.jpg" alt="Lee Bailey portrait">
+            <figcaption>Hello World! My name is Lee Bailey. Here's my picture:</figcaption>
+        </figure>
+    </div>
+      
+    
   </main>
-
 </body>
+
 </html>
