--- a/web/hello.html
+++ b/web/hello.html
@@ -44,7 +44,7 @@
   <main>
     <div class="center">
         <figure>
-            <img src="lee_prof_dec_2020.jpg" alt="Lee Bailey portrait">
+            <img src="imgs/lee_prof_dec_2020.jpg" alt="Lee Bailey portrait">
             <figcaption>Hello World! My name is Lee Bailey. Here's my picture:</figcaption>
         </figure>
     </div>
